Add journey activity added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.journeyjournal" >
+    package="com.example.journeyjournal">
 
     <application
         android:allowBackup="true"
@@ -8,16 +8,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JourneyJournal" >
+        android:theme="@style/Theme.JourneyJournal">
+        <activity
+            android:name=".AddJourney"
+            android:exported="false"
+            android:label="Add Journey"/>
         <activity
             android:name=".HomePage"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Journal Feed"/>
         <activity
             android:name=".RegisterUser"
+            android:label="Register Traveller"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
